--- a/reducer-todo/src/App.css
+++ b/reducer-todo/src/App.css
@@ -20,3 +20,46 @@
 .App-link {
   color: #09d3ac;
 }
+
+.addtask{
+  width: 270px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.add_task_btn{
+  padding: 7px;
+  font-weight: bold;
+}
+
+.todos{
+  margin: auto;
+  width: 600px;
+  text-align: center;
+}
+
+.todos p{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.complete_btn{
+  padding: 4px;
+  font-weight: bold;
+}
+
+.not_complete_btn{
+  padding: 4px;
+  font-weight: bold;
+  margin-right: 110px;
+}
+
+.clear_cpt_btn{
+  padding: 4px;
+  font-weight: bold;
+  margin: 5px;
+}
+
+
