--- a/reducer-todo/src/index.css
+++ b/reducer-todo/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #AA9FB1;
 }
 
 code {
